[tool.poetry]
name = "odometer"
version = "0.1.0"
description = ""
authors = ["= <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql = "^0.0.3"
mypy = "^0.971"
mysql-connector-python = "^8.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
